# adventofcode

./: .gitignore  README.md  desc2md.sh
2015/c++/: .gitignore  DayTemplate.cpp  DayTemplate.h  Makefile  aoc2015.cbp  aoc2015.depend  aoc2015.layout  createMakefile.sh  main.cpp
2015/inputs/: 13.txt
2015/rust/: check_programs.sh
2015/tasks/: 02.md  04.md  08.md  10.md  11.md  12.md  14.md  15.md  16.md  17.md  18.md  19.md  21.md  22.md  25.md
2016/_tasks/: day01.md  day02.md  day03.md  day04.md  day05.md  day06.md  day07.md  day08.md  day09.md  day10.md  day12.md  day13.md  day14.md  day15.md  day16.md  day17.md  day18.md  day19.md  day20.md  day21.md  day22.md  day23.md  day24.md
2016/c++/: .gitignore  AoC.hpp  DayTemplate.cpp  DayTemplate.hpp  Makefile  aoc2016.cbp  aoc2016.depend  aoc2016.layout  createMakefile.sh  main.cpp  output.txt  templates.cpp  test.py
2016/rust/: notes.txt
2017/_tasks/: day01.md  day02.md  day03.md  day04.md  day05.md  day06.md  day07.md  day08.md  day09.md  day10.md  day11.md  day12.md  day13.md  day14.md  day15.md  day16.md  day17.md  day18.md  day19.md  day20.md  day21.md  day22.md  day23.md  day24.md
2018/_tasks/: day01.md  day02.md  day03.md  day04.md  day05.md  day06.md  day07.md  day08.md  day09.md  day10.md  day11.md  day12.md  day13.md  day14.md  day15.md  day16.md  day17.md  day18.md  day19.md  day20.md  day21.md  day25.md
2020/rust/day11/: Cargo.toml
2020/rust/day11/src/: main.rs
C/11/: part1.c  (+1 more)
inputs/: 09.txt
tasks/: 01.md  02.md  03.md  05.md  06.md  07.md  08.md  09.md  10.md  12.md  13.md  20.md  23.md
(+604 files in other folders)
